Fix nav menus on mobile, improve menu / header styling, add long-form prose content template

--- a/wp-content/themes/ehg2/src/css/_content.scss
+++ b/wp-content/themes/ehg2/src/css/_content.scss
@@ -54,6 +54,10 @@
 	padding-right: 1.5rem;
 	padding-left: 1.5rem;
 	max-width: $content-width;
+
+	.page-template-page-narrow & {
+		max-width: $narrow-content-width;
+	}
 }
 
 .page-title,
@@ -67,6 +71,10 @@
 	padding-right: 1.5rem;
 	padding-left: 1.5rem;
 	max-width: $content-width;
+
+	.page-template-page-narrow & {
+		max-width: $narrow-content-width;
+	}
 }
 
 @include respond-above( $content-width ) {
